--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "webpack-cli": "^2.1.3"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
