--- a/package.json
+++ b/package.json
@@ -1,42 +1,40 @@
 {
-  "name": "spark",
-  "version": "1.0.0",
-  "description": "Spark Learning",
-  "main": "index.js",
-  "scripts": {
-    "test": "test",
-    "serve": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sparklrn/spark.git"
-  },
-  "author": "jodom",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/sparklrn/spark/issues"
-  },
-  "homepage": "https://github.com/sparklrn/spark#readme",
-  "devDependencies": {
-    "redux-logger": "^3.0.6",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3"
-  },
-  "dependencies": {
-    "axios": "^0.18.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "express": "^4.16.3",
-    "react": "^16.3.2",
-    "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.3.2",
-    "react-redux": "^5.0.7",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "reactstrap": "^6.0.1",
-    "redux": "^4.0.0"
-  }
+    "name": "spark",
+    "version": "0.1.0",
+    "description": "Spark Learning",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/sparklrn/spark.git"
+    },
+    "author": "jodom",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/sparklrn/spark/issues"
+    },
+    "homepage": "https://github.com/sparklrn/spark#readme",
+    "devDependencies": {
+        "babel-jest": "^22.4.4",
+        "npm-run-all": "^4.1.3",
+        "react-scripts": "^1.1.4",
+        "redux-logger": "^3.0.6"
+    },
+    "dependencies": {
+        "axios": "^0.18.0",
+        "express": "^4.16.3",
+        "react": "^16.3.2",
+        "react-dom": "^16.3.2",
+        "react-redux": "^5.0.7",
+        "react-router": "^4.2.0",
+        "react-router-dom": "^4.2.2",
+        "reactstrap": "^6.0.1",
+        "redux": "^4.0.0"
+    },
+    "scripts": {
+        "start-js": "react-scripts start",
+        "start": "npm-run-all -p start-js",
+        "build-js": "react-scripts build",
+        "build": "npm-run-all build-js",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject"
+    }
 }
