--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,23 @@
-*.map
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+#cache
 .sass-cache
 *cache
-node_modules
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
