--- a/package.json
+++ b/package.json
@@ -2,38 +2,40 @@
     "name": "spark",
     "version": "0.1.0",
     "description": "Spark Learning",
+    "homepage": "https://github.com/sparklrn/spark#readme",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/sparklrn/spark.git"
     },
-    "author": "jodom",
-    "license": "ISC",
     "bugs": {
         "url": "https://github.com/sparklrn/spark/issues"
     },
-    "homepage": "https://github.com/sparklrn/spark#readme",
-    "devDependencies": {
-        "babel-jest": "^22.4.4",
-        "npm-run-all": "^4.1.3",
-        "react-scripts": "^1.1.4",
-        "redux-logger": "^3.0.6"
-    },
+    "author": "jodom",
+    "private": true,
     "dependencies": {
         "axios": "^0.18.0",
         "express": "^4.16.3",
-        "react": "^16.3.2",
-        "react-dom": "^16.3.2",
+        "node-sass-chokidar": "^1.3.0",
+        "react": "^16.4.0",
+        "react-dom": "^16.4.0",
         "react-redux": "^5.0.7",
         "react-router": "^4.2.0",
         "react-router-dom": "^4.2.2",
+        "react-scripts": "1.1.4",
         "reactstrap": "^6.0.1",
         "redux": "^4.0.0"
     },
+    "devDependencies": {
+        "npm-run-all": "^4.1.3",
+        "redux-logger": "^3.0.6"
+    },
     "scripts": {
+        "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+        "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
         "start-js": "react-scripts start",
-        "start": "npm-run-all -p start-js",
+        "start": "npm-run-all -p watch-css start-js",
         "build-js": "react-scripts build",
-        "build": "npm-run-all build-js",
+        "build": "npm-run-all build-css build-js",
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject"
     }
