--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "author": "jodom",
     "private": true,
     "dependencies": {
+        "@coreui/coreui": "^2.0.0-beta.8",
+        "@coreui/react": "^2.0.0-beta",
         "axios": "^0.18.0",
         "express": "^4.16.3",
         "node-sass-chokidar": "^1.3.0",
